--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <a href="./example/helloworld.html">Hello World 案例</a>
             <li><a href="./example/v-if.html">v-if&v-show&v-else</a></li>
             <li><a href="./example/v-for.html">v-for 案例</a></li>
+            <li><a href="./example/v-text.html">v-text & v-html 案例</a></li>
+            <li><a href="./example/v-on.html">v-on 监听事件 案例</a></li>
+            <li><a href="./example/v-model.html">v-model 绑定数据源 案例</a></li>
+            <li><a href="./example/v-bind.html">v-bind 案例</a></li>
         </li>
     </ol>
 </body>
