--- a/index.html
+++ b/index.html
@@ -13,12 +13,35 @@
     <ol>
         <li>
             <a href="./example/helloworld.html">Hello World 案例</a>
-            <li><a href="./example/v-if.html">v-if&v-show&v-else</a></li>
-            <li><a href="./example/v-for.html">v-for 案例</a></li>
-            <li><a href="./example/v-text.html">v-text & v-html 案例</a></li>
-            <li><a href="./example/v-on.html">v-on 监听事件 案例</a></li>
-            <li><a href="./example/v-model.html">v-model 绑定数据源 案例</a></li>
-            <li><a href="./example/v-bind.html">v-bind 案例</a></li>
+            <li>
+                <a href="./example/v-if.html">v-if&v-show&v-else</a>
+            </li>
+            <li>
+                <a href="./example/v-for.html">v-for 案例</a>
+            </li>
+            <li>
+                <a href="./example/v-text.html">v-text & v-html 案例</a>
+            </li>
+            <li>
+                <a href="./example/v-on.html">v-on 监听事件 案例</a>
+            </li>
+            <li>
+                <a href="./example/v-model.html">v-model 绑定数据源 案例</a>
+            </li>
+            <li>
+                <a href="./example/v-bind.html">v-bind 案例</a>
+            </li>
+            <li>
+                <a href="./example/others.html">其它内部指令 v-pre & v-cloak & v-once</a>
+            </li>
+        </li>
+    </ol>
+    <hr>
+    <h3>第二季：Vue全局AIP</h3>
+    <ol>
+        <li>
+            <a href="./example/vue.directive.html">Vue.directive 自定义指令</a>
+            <li><a href="./example/vue.extend.html">Vue.extend 延伸</a></li>  
         </li>
     </ol>
 </body>
