--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
         <li>
             <a href="./example/vue.directive.html">Vue.directive 自定义指令</a>
             <li><a href="./example/vue.extend.html">Vue.extend 延伸</a></li>  
+            <li><a href="./example/vue.set.html">Vue.set 全局操作</a></li>  
+            <li><a href="./example/vue.life.html">构造器的生命周期</a></li>
+            <li><a href="./example/template.html">Template 模板的写法</a></li>
+            <li><a href="./example/component-1.html">component:组件-1</a></li>
+            <li><a href="./example/component-2.html">component:组件-2 props</a></li>
+            <li><a href="./example/component-3.html">component:组件-3 父子组件</a></li>
+            <li><a href="./example/component-4.html">component:组件-4 标签</a></li>
         </li>
     </ol>
 </body>
