--- a/index.html
+++ b/index.html
@@ -41,15 +41,65 @@
     <ol>
         <li>
             <a href="./example/vue.directive.html">Vue.directive 自定义指令</a>
-            <li><a href="./example/vue.extend.html">Vue.extend 延伸</a></li>  
-            <li><a href="./example/vue.set.html">Vue.set 全局操作</a></li>  
-            <li><a href="./example/vue.life.html">构造器的生命周期</a></li>
-            <li><a href="./example/template.html">Template 模板的写法</a></li>
-            <li><a href="./example/component-1.html">component:组件-1</a></li>
-            <li><a href="./example/component-2.html">component:组件-2 props</a></li>
-            <li><a href="./example/component-3.html">component:组件-3 父子组件</a></li>
-            <li><a href="./example/component-4.html">component:组件-4 标签</a></li>
         </li>
+        <li>
+            <a href="./example/vue.extend.html">Vue.extend 延伸</a>
+        </li>
+        <li>
+            <a href="./example/vue.set.html">Vue.set 全局操作</a>
+        </li>
+        <li>
+            <a href="./example/vue.life.html">构造器的生命周期</a>
+        </li>
+        <li>
+            <a href="./example/template.html">Template 模板的写法</a>
+        </li>
+        <li>
+            <a href="./example/component-1.html">component:组件-1</a>
+        </li>
+        <li>
+            <a href="./example/component-2.html">component:组件-2 props</a>
+        </li>
+        <li>
+            <a href="./example/component-3.html">component:组件-3 父子组件</a>
+        </li>
+        <li>
+            <a href="./example/component-4.html">component:组件-4 标签</a>
+        </li>
+
+    </ol>
+    <hr>
+    <h3>第三季：Vue选项</h3>
+    <ol>
+        <li>
+            <a href="./example/propsdata.html">propsData Optin</a>
+        </li>
+        <li>
+            <a href="./example/computed.html">computed Optin</a>
+        </li>
+        <li>
+            <a href="./example/mothods.html">mothods Optin</a>
+        </li>
+        <li>
+            <a href="./example/watch.html">watch Optin</a>
+        </li>
+        <li>
+            <a href="./example/mixins.html">mixins Optin</a>
+        </li>
+        <li>
+            <a href="./example/extends.html">extends Optin</a>
+        </li>
+        <li>
+            <a href="./example/otherOption.html">Other Optin</a>
+        </li>
+    </ol>
+    <hr>
+    <h3>第四季：Vue实例</h3>
+    <ol>
+        <li><a href="./example/examples1.html">Early examples Demo-实例属性</a></li>        
+        <li><a href="./example/examples2.html">examples method Demo-实例方法</a></li>           
+        <li><a href="./example/examples3.html">examples Event Demo-实例事件</a></li>           
+        <li><a href="./example/slot.html"> slot Demo-实例事件</a></li>           
     </ol>
 </body>
 
